Change flex values and justify-content to solve mobile alignment issues

--- a/css/index.css
+++ b/css/index.css
@@ -11,7 +11,6 @@ html {
 body {
     display: flex;
     flex-direction: column;
-    flex: auto;
 }
 
 .header {
@@ -20,15 +19,13 @@ body {
     flex-direction: row;
     padding: 25px 2em;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: space-between;
     gap: 3em;
     font-weight: 500;
     margin-bottom: 50px;
     margin-top: -10px;
     margin-left: -10px;
     margin-right: -10px;
-    flex: auto;
-
 }
 
 .header-link {
@@ -51,7 +48,6 @@ img  {
     align-items: center;
     justify-content: center;
     margin: 25px 100px;
-    flex: 1 1 0;
     opacity: 100%;
 }
 .big-name {
@@ -64,6 +60,7 @@ img  {
 
 .body-flex {
     display: flex;
+    justify-content: space-between;
 }
 
 .description-header {
@@ -79,7 +76,7 @@ img  {
     margin-right: 50px;
     margin-bottom: 50px;
     width: 500px;
-    flex: 1 0 0;
+    flex-basis: 50%;
 }
 
 .description-content {
@@ -97,7 +94,7 @@ img  {
     width: 200px;
     padding: 25px 10px;
     margin-bottom: -10px;
-    flex: 0 1 0;
+    flex-basis: 10%;
 }
 
 .right-sidebar-header {
